# leaderboard_dora

./: Leaderboard与Dora的联合仿真系统使用说明文档(1).docx  README.md
dora/: .goutputstream-94G7W2  README.md  Waypoints.txt  all_receive.yml  output.txt  road_msg.txt
dora/control/vehicle_control/ctrl_trans/: CMakeLists.txt  ctrl_trans_test.yml
dora/control/vehicle_control/ctrl_trans/src/: control_cmd_trans.cpp
dora/control/vehicle_control/lat_controller/: CMakeLists.txt  interface_lat.cpp  path.txt  pure_pursuit.cpp
dora/control/vehicle_control/lon_controller/: CMakeLists.txt  interface_lon.cpp  lon_controller.cpp
dora/dora-hardware/dora_to_ros2/lidar/: CMakeLists.txt  README.md  dataflow.yml  dataflow_pcap.yml  dataflow_pcap_ros.yml  lidar_to_ros2.py  rslidar_driver.cc  rslidar_driver_pcap.cc
dora/dora-hardware/vendors/carla_bridge/receiver/: CMakeLists.txt  one.cpp
dora/dora-hardware/vendors/carla_bridge/receiver/rs_driver/src/rs_driver/utility/: sync_queue.hpp
dora/dora-hardware/vendors/carla_bridge/receiver/rs_driver/tool/: rs_driver_viewer.cpp
dora/dora-hardware/vendors/gnss/CGI_610/: CGI_610_driver_dora.py  CMakeLists.txt  cgi610_outdata.txt  cgi610_outdata_2.txt  driver.cpp  gps_to_ros2.py
dora/dora-hardware/vendors/gnss/CGI_610/include/: imu_msg.h
dora/include/: v_chassis_interface.h
dora/localization/ekf_localizer/: CMakeLists.txt  README.md
dora/localization/ekf_localizer/src/: ekf_odom_to_ros2.py  gnss_ekf.cc  gnss_ekf.py
dora/localization/ndt_localizer/: dataflow_pcap.yml
dora/localization/ndt_mapping/: README.md  dataflow_pcap.yml
dora/localization/pointcloud_preprocessor/: CMakeLists.txt  README.md  crop_box_point.cc  pointcloud_preprocessor.yml  ring_outlier_fliter.cc
dora/map/road_line_publisher/: CMakeLists.txt  road_lane.cpp
dora/planning/mission_planning/task_pub/: CMakeLists.txt  main.cpp
dora/planning/routing_planning/: CMakeLists.txt  node_routing_core.cpp  pathplanning.cpp  planning_path_to_ros2.py
dora/rerun/: CMakeLists.txt
dora/rerun/src/: points_to_rerun.cpp
dora/sensing/geo_pos_conv/: README.md
dora/sensing/gnss_poser/: CMakeLists.txt  README.md  fd28de90-84ad-427c-9980-eba8fea458dd gnss_ekf  maptest.cpp  pubroad.cpp  pubroad.sh  start.sh
dora/sensing/gnss_poser/include/gnss_poser/: convert.hpp  gnss_poser_core.hpp
dora/sensing/gnss_poser/map/: aeb.txt
dora/sensing/gnss_poser/pub/: pubroad.cpp
dora/sensing/gnss_poser/src/: gnss_poser_core.cc  gnss_poser_core_cxx.cc  gps_to_ros2.py  gps_to_ros2_test.py  gps_xyz_to_ros2.py
dora/sensing/gnss_poser/test/: gps_to_ros2_test.py
dora/sensing/imu_corrector/: README.md
dora/sensing/imu_corrector/config/: imu_corrector.param.yaml
dora/sensing/imu_corrector/src/: imu_corrector_core.cc
leaderboard/leaderboard/: leaderboard_evaluator.py
leaderboard/leaderboard/autoagents/: agent_wrapper.py  autonomous_agent.py  brake_test.py  contro_send.py  dora.py  lidar_viewer.py  rec_test.py  run_both_test.py  test.py
leaderboard/leaderboard/scenarios/: route_scenario.py
leaderboard/path/: README.md
leaderboard/path/aeb/: ENU_Data.txt  GNSS_Data.txt
leaderboard/path/obstacle/: ENU_Data.txt  GNSS_Data.txt
leaderboard/path/pure_track/: ENU_Data.txt  GNSS_Data.txt
